pridany dva nove odkazy

--- a/_posts/2013-11-28-jak-zacit.md
+++ b/_posts/2013-11-28-jak-zacit.md
@@ -13,7 +13,7 @@ created: 1385650866
 <p><div class="youtube-player" data-id="kVZuBN7_2-8"></div></p>
 <p>4) Asi nejnáročnější část základů je hození káči přímo na ruku - <strong>Boomerang</strong>. Hod je stejný jako u Spinneru, ale těsně před vymotáním celého provázku cuknete rukou zpět, čímž káča vyletí směrem k vám. Ze začátku káča často poletí úplně nakřivo a bude se špatně chytat. Pokud letí hrotem od vás, nakloňte ji v příštím hodu hrotem více dopředu, pokud letí hrotem k vám, nakloňte ji při hodu naopak hrotem více k sobě. Nezapomeňte dopad rukou ztlumit, aby káča nevyskočila z dlaně ven.</p>
 <p><div class="youtube-player" data-id="e-wofYRyHrE"></div></p>
-<p>5) Posledním krokem je <strong>srovnat káču</strong> na dlani. Rukou opisujete krouživý pohyb po spirále směrem do jejího středu. Nejčastější začátečnickou chybou je tlačit nakloněnou káču rukou směrem k jejímu vrcholu. Naopak je důležité káču "tahat" za hrot a zároveň opisovat rukou spirálu. Srovnávání je pěkně vysvětlené ve videu z bodu 4.</p>
+<p>5) Posledním krokem je <strong>srovnat káču</strong> na dlani. Rukou opisujete krouživý pohyb po spirále směrem do jejího středu. Nejčastější začátečnickou chybou je tlačit nakloněnou káču rukou směrem k jejímu vrcholu. Naopak je důležité káču "tahat" za hrot a zároveň opisovat rukou spirálu. Srovnávání je pěkně vysvětlené ve videu z bodu 4. Další video najdete i <a href="https://www.youtube.com/watch?v=AjyaFDEYYbg">zde</a>, případně <a href="https://www.youtube.com/watch?v=k_6bhV8_AgM">zde</a>.</p>
 <p>Při pravidelném tréninku se Boomerang a srovnání káči dá naučit do měsíce (tak dlouho to trvalo mně), některým to jde už po pár dnech.</p>
 <p><strong>Základní triky</strong> - většina triků lze provádět s ložiskovou i fixní káčou (viz <a href="http://spintop.cz/content/triky">rozdělení káč</a>), některé triky jsou ovšem proveditelné pouze s určitým typem hrotu a nebo jsou s jedním typem výrazně jednodušší, než s druhým. Proto je seznam základních triků rozdělen na dvě kategorie.</p>
 <table border="0" cellpadding="0" cellspacing="1" style="width: 500px;"><tbody><tr><td><strong>Ložiskový hrot</strong></td>
