--- a/_posts/2021-11-13-worlds-2021-online.md
+++ b/_posts/2021-11-13-worlds-2021-online.md
@@ -1,5 +1,7 @@
 ---
 published: false
+categories: []
+layout: post
 ---
 Stejně jako v minulém roce, se i letos uskutečnilo mistrovství světa v káčování online. Opět se přihlásil velký počet účastníku a byli jsme svědky skvělých výkonů. 
 
