polishing worlds posts

--- a/_posts/2020-11-01-worlds-2020-online.md
+++ b/_posts/2020-11-01-worlds-2020-online.md
@@ -11,30 +11,130 @@ Do soutěže se přihlásilo neuvěřitelných 90 soutěžících z nichž rozho
 
 Výdledky open kategorie:
 
-| Position |  | Vote score |
-|-|-|-|
-| 1st | Guillem Vizcaino (Balearic Islands) | 58 |
-| 2nd | Kanta Tani (Japan) | 42 |
-| 3rd | Gerardo Montero-Rivera (Mexico) | 24 |
-| 4th | Jun Shimamura (Japan) | 22 |
-| 5th | Chris Neff (USA) | 19 |
-| 6th | Kei Yamase (Japan) | 11 |
-| 7th | Quentin Godet (France) | 10 |
-| 8th | Marco Palma, “Cuper” (Mexico) | 2 |
-| 9th | Zenith (Spain) | 2 |
-| 10th | Zero (Japan) | 0 |
+<table class="styled-table">
+<thead>
+<tr>
+<th>Umístění</th>
+<th>Jméno</th>
+<th>Skóre</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1st</td>
+<td>Guillem Vizcaino (Balearic Islands)</td>
+<td>58</td>
+</tr>
+<tr>
+<td>2nd</td>
+<td>Kanta Tani (Japan)</td>
+<td>42</td>
+</tr>
+<tr>
+<td>3rd</td>
+<td>Gerardo Montero-Rivera (Mexico)</td>
+<td>24</td>
+</tr>
+<tr>
+<td>4th</td>
+<td>Jun Shimamura (Japan)</td>
+<td>22</td>
+</tr>
+<tr>
+<td>5th</td>
+<td>Chris Neff (USA)</td>
+<td>19</td>
+</tr>
+<tr>
+<td>6th</td>
+<td>Kei Yamase (Japan)</td>
+<td>11</td>
+</tr>
+<tr>
+<td>7th</td>
+<td>Quentin Godet (France)</td>
+<td>10</td>
+</tr>
+<tr>
+<td>8th</td>
+<td>Marco Palma, “Cuper” (Mexico)</td>
+<td>2</td>
+</tr>
+<tr>
+<td>9th</td>
+<td>Zenith (Spain)</td>
+<td>2</td>
+</tr>
+<tr>
+<td>10th</td>
+<td>Zero (Japan)</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
+
 
 Výsledky traditional kategorie:
 
-| Position |  | Vote Score |
-|-|-|-|
-| 1st | Brian Felipe Gaspar (Colombia) | 53 |
-| 2nd | Guillem Vizcaino (Balearic Islands) | 52 |
-| 3rd | Herney de Jesús García-Rivera (Colombia) | 26 |
-| 4th | Jader Moná-Sanchez (Colombia) | 17 |
-| 5th | Sina (Balearic Islands) | 13 |
-| 6th | Xisco Valls (Balearic Islands) | 13 |
-| 7th | John Lopez-Hernandez (Ecuador) | 6 |
-| 8th | Momotaro Sakashita (Japan) | 4 |
-| 9th | Zero (Japan) | 3 |
-| 10th | Zenith (Spain) | 3 |
+<table class="styled-table">
+<thead>
+<tr>
+<th>Umístění</th>
+<th>Jméno</th>
+<th>Skóre</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1st</td>
+<td>Brian Felipe Gaspar (Colombia)</td>
+<td>53</td>
+</tr>
+<tr>
+<td>2nd</td>
+<td>Guillem Vizcaino (Balearic Islands)</td>
+<td>52</td>
+</tr>
+<tr>
+<td>3rd</td>
+<td>Herney de Jesús García-Rivera (Colombia)</td>
+<td>26</td>
+</tr>
+<tr>
+<td>4th</td>
+<td>Jader Moná-Sanchez (Colombia)</td>
+<td>17</td>
+</tr>
+<tr>
+<td>5th</td>
+<td>Sina (Balearic Islands)</td>
+<td>13</td>
+</tr>
+<tr>
+<td>6th</td>
+<td>Xisco Valls (Balearic Islands)</td>
+<td>13</td>
+</tr>
+<tr>
+<td>7th</td>
+<td>John Lopez-Hernandez (Ecuador)</td>
+<td>6</td>
+</tr>
+<tr>
+<td>8th</td>
+<td>Momotaro Sakashita (Japan)</td>
+<td>4</td>
+</tr>
+<tr>
+<td>9th</td>
+<td>Zero (Japan)</td>
+<td>3</td>
+</tr>
+<tr>
+<td>10th</td>
+<td>Zenith (Spain)</td>
+<td>3</td>
+</tr>
+</tbody>
+</table>
+
