Results of Worlds 2023 in Tokyo

--- a/_posts/2014-01-30-vysledky.md
+++ b/_posts/2014-01-30-vysledky.md
@@ -3052,7 +3052,6 @@ Freestyle
 		</tr>
 	</thead>
 	<tbody>
-
 <tr>
 <td>1</td>
 <td><a href="https://www.youtube.com/watch?v=C9sQENyoPeU">Val</a></td>
@@ -3182,6 +3181,278 @@ Freestyle
 </tr>
 </tbody>
 </table>
+</div>
+
+<div>- <a class="toggle-button">2023 Tokyo</a></div>
+<div class="toggle-list">
+   <strong>Open</strong>
+   <table class="styled-table">
+      <thead>
+         <tr>
+            <th>Pořadí</th>
+            <th>Jméno a příjmení</th>
+            <th>Národnost</th>
+            <th>Skóre</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td>1</td>
+            <td>Jun Shimamura</td>
+            <td>Japan</td>
+            <td>96.5</td>
+         </tr>
+         <tr>
+            <td>2</td>
+            <td>Yahir Ortega</td>
+            <td>Mexico</td>
+            <td>81.9</td>
+         </tr>
+         <tr>
+            <td>3</td>
+            <td>Nobuyoshi Hasegawa</td>
+            <td>Japan</td>
+            <td>71.5</td>
+         </tr>
+         <tr>
+            <td>4</td>
+            <td>Takumi Kakizakai</td>
+            <td>Japan</td>
+            <td>61.2</td>
+         </tr>
+         <tr>
+            <td>5</td>
+            <td>Yuki Kiritani</td>
+            <td>Japan</td>
+            <td>58.8</td>
+         </tr>
+         <tr>
+            <td>6</td>
+            <td>Francisco Valls</td>
+            <td>Spain</td>
+            <td>54.8</td>
+         </tr>
+         <tr>
+            <td>7</td>
+            <td>Kazuha Sakamoto</td>
+            <td>Japan</td>
+            <td>54.0</td>
+         </tr>
+         <tr>
+            <td>8</td>
+            <td>Rei Teruya</td>
+            <td>Japan</td>
+            <td>49.3</td>
+         </tr>
+         <tr>
+            <td>9</td>
+            <td>Quentin Godet</td>
+            <td>France</td>
+            <td>48.8</td>
+         </tr>
+         <tr>
+            <td>10</td>
+            <td>Junpei Tani</td>
+            <td>Japan</td>
+            <td>46.9</td>
+         </tr>
+         <tr>
+            <td>11</td>
+            <td>Skye Cerd&agrave; Bota</td>
+            <td>Spain</td>
+            <td>45.8</td>
+         </tr>
+         <tr>
+            <td>12</td>
+            <td>Koutaro Akasaka</td>
+            <td>Japan</td>
+            <td>43.1</td>
+         </tr>
+         <tr>
+            <td>13</td>
+            <td>Akira Kakisakai</td>
+            <td>Japan</td>
+            <td>40.3</td>
+         </tr>
+         <tr>
+            <td>14</td>
+            <td>Momotaro Sakashita</td>
+            <td>Japan</td>
+            <td>35.7</td>
+         </tr>
+         <tr>
+            <td>15</td>
+            <td>Ichi Nagano</td>
+            <td>Japan</td>
+            <td>33.5</td>
+         </tr>
+         <tr>
+            <td>16</td>
+            <td>Nosoko Yoshiyuki</td>
+            <td>Japan</td>
+            <td>33.4</td>
+         </tr>
+         <tr>
+            <td>17</td>
+            <td>Naoto Yasumura</td>
+            <td>Japan</td>
+            <td>27.5</td>
+         </tr>
+         <tr>
+            <td>18</td>
+            <td>Rentaro Uemura</td>
+            <td>Japan</td>
+            <td>24.4</td>
+         </tr>
+         <tr>
+            <td>19</td>
+            <td>Ryusei Kaga</td>
+            <td>Japan</td>
+            <td>17.9</td>
+         </tr>
+         <tr>
+            <td>20</td>
+            <td>Ren Kitsunai</td>
+            <td>Japan</td>
+            <td>13.1</td>
+         </tr>
+      </tbody>
+   </table>
+   <strong>Traditional</strong>
+   <table class="styled-table">
+      <thead>
+         <tr>
+            <th>Pořadí</th>
+            <th>Jméno a příjmení</th>
+            <th>Národnost</th>
+            <th>Skóre</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td>1</td>
+            <td>Tomohiro Tokunaga</td>
+            <td>Japan</td>
+            <td>90.7</td>
+         </tr>
+         <tr>
+            <td>2</td>
+            <td>Skye Cerd&agrave; Bota</td>
+            <td>Spain</td>
+            <td>69.0</td>
+         </tr>
+         <tr>
+            <td>3</td>
+            <td>Francisco Valls</td>
+            <td>Spain</td>
+            <td>65.6</td>
+         </tr>
+         <tr>
+            <td>4</td>
+            <td>Kibo Okada</td>
+            <td>Japan</td>
+            <td>53.9</td>
+         </tr>
+         <tr>
+            <td>5</td>
+            <td>Momotaro Sakashita</td>
+            <td>Japan</td>
+            <td>43.1</td>
+         </tr>
+         <tr>
+            <td>6</td>
+            <td>Kazuhide Noguchi</td>
+            <td>Japan</td>
+            <td>33.3</td>
+         </tr>
+         <tr>
+            <td>7</td>
+            <td>Rentaro Uemura</td>
+            <td>Japan</td>
+            <td>30.5</td>
+         </tr>
+         <tr>
+            <td>8</td>
+            <td>Kazuhito Miki</td>
+            <td>Japan</td>
+            <td>30.3</td>
+         </tr>
+         <tr>
+            <td>9</td>
+            <td>Rocco Cosca</td>
+            <td>Italy</td>
+            <td>23.4</td>
+         </tr>
+         <tr>
+            <td>10</td>
+            <td>Kumiko Suzuta</td>
+            <td>Japan</td>
+            <td>23.3</td>
+         </tr>
+      </tbody>
+   </table>
+   <strong>Tsubame Cup International Open</strong>
+   <table class="styled-table">
+      <thead>
+         <tr>
+            <th>Pořadí</th>
+            <th>Jméno a příjmení</th>
+            <th>Skóre</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td>1</td>
+            <td>Nobu</td>
+            <td>192</td>
+         </tr>
+         <tr>
+            <td>2</td>
+            <td>Satoshi</td>
+            <td>190</td>
+         </tr>
+         <tr>
+            <td>3</td>
+            <td>Zero</td>
+            <td>169</td>
+         </tr>
+         <tr>
+            <td>4</td>
+            <td>Kei</td>
+            <td>153</td>
+         </tr>
+         <tr>
+            <td>5</td>
+            <td>Marshmallow</td>
+            <td>150</td>
+         </tr>
+         <tr>
+            <td>6</td>
+            <td>Yamada</td>
+            <td>148</td>
+         </tr>
+         <tr>
+            <td>7</td>
+            <td>Craftsman</td>
+            <td>146</td>
+         </tr>
+         <tr>
+            <td>8</td>
+            <td>Top Samurai</td>
+            <td>126</td>
+         </tr>
+         <tr>
+            <td>9</td>
+            <td>Yamase</td>
+            <td>123</td>
+         </tr>
+         <tr>
+            <td>10</td>
+            <td>Naoti</td>
+            <td>97</td>
+         </tr>
+      </tbody>
+   </table>
 </div>
 
 
